--- a/index.html
+++ b/index.html
@@ -1,143 +1,141 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Visser Style Outfit AI</title>
-<style>
-  body {
-    font-family: 'Arial', sans-serif;
-    background-color: #000;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-  }
-  header {
-    text-align: center;
-    padding: 30px 20px 10px 20px;
-  }
-  h1 {
-    font-size: 3rem;
-    margin: 0;
-  }
-  p {
-    font-size: 1.2rem;
-    margin-top: 10px;
-  }
-  main {
-    width: 100%;
-    max-width: 800px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  input[type="file"] {
-    margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-  }
-  button {
-    background-color: #fff;
-    color: #000;
-    font-weight: bold;
-    border: none;
-    padding: 15px 40px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1.1rem;
-    transition: transform 0.2s;
-    margin-bottom: 30px;
-  }
-  button:hover {
-    transform: scale(1.05);
-  }
-  #result {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 20px;
-    width: 100%;
-    justify-items: center;
-  }
-  .outfit-card {
-    background-color: #111;
-    border-radius: 12px;
-    padding: 10px;
-    text-align: center;
-    box-shadow: 0 0 15px #fff3;
-    transition: transform 0.2s;
-  }
-  .outfit-card:hover {
-    transform: scale(1.05);
-  }
-  .outfit-card img {
-    max-width: 100%;
-    border-radius: 10px;
-    margin-bottom: 8px;
-  }
-  .outfit-title {
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  .outfit-style {
-    font-size: 0.9rem;
-    color: #ccc;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Visser Style Outfit AI</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
+    body { background: #000; color: #fff; }
+    a { color: #fff; text-decoration: none; }
+    header { display: flex; justify-content: space-between; align-items: center; padding: 20px; border-bottom: 1px solid #333; }
+    header h1 { font-weight: 700; font-size: 24px; }
+    nav a { margin-left: 20px; font-weight: 500; }
+    .hero { text-align: center; padding: 100px 20px; background: #111; }
+    .hero h2 { font-size: 36px; margin-bottom: 20px; }
+    .hero p { font-size: 18px; margin-bottom: 30px; }
+    .btn { background: #fff; color: #000; padding: 15px 30px; font-weight: 700; border: none; cursor: pointer; border-radius: 5px; transition: 0.3s; }
+    .btn:hover { background: #C9A86A; color: #000; }
+    .section { padding: 80px 20px; text-align: center; }
+    .section h3 { font-size: 28px; margin-bottom: 40px; }
+    .packs { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+    .pack { background: #111; border: 1px solid #333; padding: 30px; border-radius: 10px; width: 280px; transition: 0.3s; }
+    .pack:hover { border-color: #C9A86A; transform: translateY(-5px); }
+    .pack h4 { margin-bottom: 15px; font-size: 22px; }
+    .pack p { margin-bottom: 20px; font-size: 16px; }
+    .upload-section { margin: 40px 0; }
+    input[type="file"] { padding: 10px; background: #222; border: 1px solid #555; border-radius: 5px; color: #fff; }
+    .results { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 40px; }
+    .result-card { background: #111; border: 1px solid #333; border-radius: 10px; width: 200px; padding: 10px; }
+    .result-card img { width: 100%; border-radius: 10px; }
+    footer { background: #111; padding: 40px 20px; text-align: center; border-top: 1px solid #333; }
+    footer a { margin: 0 10px; }
+    @media(max-width: 768px) { .packs, .results { flex-direction: column; align-items: center; } }
+  </style>
 </head>
 <body>
-<header>
-  <h1>Visser Style Outfit AI</h1>
-  <p>Envoie ta photo et découvre ton outfit stylé généré par IA 😎</p>
-</header>
 
-<main>
-  <input type="file" id="photoInput" accept="image/*">
-  <button id="submitBtn">Générer mes outfits</button>
+  <header>
+    <h1>Visser Style</h1>
+    <nav>
+      <a href="#how">Comment ça marche</a>
+      <a href="#packs">Nos Packs</a>
+      <a href="#examples">Exemples</a>
+      <a href="#faq">FAQ</a>
+    </nav>
+  </header>
 
-  <div id="result"></div>
-</main>
+  <section class="hero">
+    <h2>Become Your Best Version</h2>
+    <p>Envoie ton selfie et découvre ton style parfait généré par l'IA !</p>
+    <button class="btn" onclick="document.getElementById('upload').scrollIntoView({behavior:'smooth'});">Commencer</button>
+  </section>
 
-<script>
-  const submitBtn = document.getElementById('submitBtn');
-  const photoInput = document.getElementById('photoInput');
-  const result = document.getElementById('result');
+  <section id="how" class="section">
+    <h3>Comment ça marche</h3>
+    <div class="upload-section">
+      <input type="file" id="upload" accept="image/*">
+      <button class="btn" onclick="generateOutfits()">Générer mes outfits</button>
+    </div>
+    <div class="results" id="results">
+      <!-- Les résultats IA apparaîtront ici -->
+    </div>
+  </section>
 
-  const outfitsMock = [
-    { title: "Streetwear Vibe", style: "Casual, sneakers, hoodies", img: "https://via.placeholder.com/200x300.png?text=Streetwear" },
-    { title: "Chic Moderne", style: "Blazer, chemise, boots", img: "https://via.placeholder.com/200x300.png?text=Chic" },
-    { title: "Winter Cozy", style: "Pulls, écharpes, manteaux", img: "https://via.placeholder.com/200x300.png?text=Winter" },
-    { title: "Club Night", style: "Look soirée, accessoires stylés", img: "https://via.placeholder.com/200x300.png?text=Club" },
-    { title: "Minimalist", style: "Tons neutres, lignes épurées", img: "https://via.placeholder.com/200x300.png?text=Minimal" }
-  ];
+  <section id="packs" class="section">
+    <h3>Nos Packs</h3>
+    <div class="packs">
+      <div class="pack">
+        <h4>Pack Découverte</h4>
+        <p>3 looks stylés générés par IA</p>
+        <button class="btn">5€</button>
+      </div>
+      <div class="pack">
+        <h4>Pack Lookbook</h4>
+        <p>20 looks + mini reels</p>
+        <button class="btn">19,99€</button>
+      </div>
+      <div class="pack">
+        <h4>Abonnement Style Club</h4>
+        <p>5 looks par mois + bonus exclusifs</p>
+        <button class="btn">9€/mois</button>
+      </div>
+    </div>
+  </section>
 
-  submitBtn.addEventListener('click', () => {
-    if(photoInput.files.length === 0){
-      alert("Choisis une photo d'abord !");
-      return;
-    }
+  <section id="examples" class="section">
+    <h3>Exemples de Looks</h3>
+    <div class="results">
+      <div class="result-card">
+        <img src="https://via.placeholder.com/200x250?text=Look+1" alt="Look 1">
+        <p>Streetwear stylé</p>
+      </div>
+      <div class="result-card">
+        <img src="https://via.placeholder.com/200x250?text=Look+2" alt="Look 2">
+        <p>Look chic & moderne</p>
+      </div>
+      <div class="result-card">
+        <img src="https://via.placeholder.com/200x250?text=Look+3" alt="Look 3">
+        <p>Minimaliste & épuré</p>
+      </div>
+    </div>
+  </section>
 
-    result.innerHTML = "<p>✨ Génération en cours...</p>";
+  <section id="faq" class="section">
+    <h3>FAQ & Sécurité</h3>
+    <p>Vos photos sont supprimées après génération.</p>
+    <p>Les paiements sont sécurisés via PayPal/Stripe.</p>
+    <p>Accessible à tous ceux qui veulent être stylés facilement.</p>
+  </section>
 
-    setTimeout(() => {
-      result.innerHTML = "";
-      outfitsMock.forEach(outfit => {
+  <footer>
+    <p>© 2025 Visser Style</p>
+    <p>
+      <a href="#">Instagram</a> | 
+      <a href="#">TikTok</a> | 
+      <a href="#">Contact</a>
+    </p>
+  </footer>
+
+  <script>
+    function generateOutfits() {
+      const results = document.getElementById('results');
+      results.innerHTML = '';
+      for(let i=1;i<=3;i++){
         const card = document.createElement('div');
-        card.className = 'outfit-card';
-        card.innerHTML = `
-          <img src="${outfit.img}" alt="${outfit.title}">
-          <div class="outfit-title">${outfit.title}</div>
-          <div class="outfit-style">${outfit.style}</div>
-        `;
-        result.appendChild(card);
-      });
-    }, 1500);
-  });
-</script>
+        card.classList.add('result-card');
+        const img = document.createElement('img');
+        img.src = 'https://via.placeholder.com/200x250?text=Look+'+i;
+        img.alt = 'Look '+i;
+        const p = document.createElement('p');
+        p.innerText = 'Ton look stylé n°'+i;
+        card.appendChild(img);
+        card.appendChild(p);
+        results.appendChild(card);
+      }
+    }
+  </script>
+
 </body>
 </html>
