--- a/index.html
+++ b/index.html
@@ -3,139 +3,108 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visser Style Outfit AI</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <title>Visser Style - Ton styliste IA</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
-    body { background: #000; color: #fff; }
-    a { color: #fff; text-decoration: none; }
-    header { display: flex; justify-content: space-between; align-items: center; padding: 20px; border-bottom: 1px solid #333; }
-    header h1 { font-weight: 700; font-size: 24px; }
-    nav a { margin-left: 20px; font-weight: 500; }
-    .hero { text-align: center; padding: 100px 20px; background: #111; }
-    .hero h2 { font-size: 36px; margin-bottom: 20px; }
-    .hero p { font-size: 18px; margin-bottom: 30px; }
-    .btn { background: #fff; color: #000; padding: 15px 30px; font-weight: 700; border: none; cursor: pointer; border-radius: 5px; transition: 0.3s; }
-    .btn:hover { background: #C9A86A; color: #000; }
-    .section { padding: 80px 20px; text-align: center; }
-    .section h3 { font-size: 28px; margin-bottom: 40px; }
-    .packs { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
-    .pack { background: #111; border: 1px solid #333; padding: 30px; border-radius: 10px; width: 280px; transition: 0.3s; }
-    .pack:hover { border-color: #C9A86A; transform: translateY(-5px); }
-    .pack h4 { margin-bottom: 15px; font-size: 22px; }
-    .pack p { margin-bottom: 20px; font-size: 16px; }
-    .upload-section { margin: 40px 0; }
-    input[type="file"] { padding: 10px; background: #222; border: 1px solid #555; border-radius: 5px; color: #fff; }
-    .results { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 40px; }
-    .result-card { background: #111; border: 1px solid #333; border-radius: 10px; width: 200px; padding: 10px; }
-    .result-card img { width: 100%; border-radius: 10px; }
-    footer { background: #111; padding: 40px 20px; text-align: center; border-top: 1px solid #333; }
-    footer a { margin: 0 10px; }
-    @media(max-width: 768px) { .packs, .results { flex-direction: column; align-items: center; } }
+    body {font-family: Arial, sans-serif; margin:0; padding:0; background:#fff; color:#000;}
+    header {background:#000; color:#fff; text-align:center; padding:50px 20px;}
+    header h1 {margin:0; font-size:2.5em;}
+    header p {margin:10px 0 0; font-size:1.2em;}
+    section {padding:40px 20px; text-align:center;}
+    .packs {display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px;}
+    .pack {border:1px solid #000; padding:20px; width:250px; border-radius:10px;}
+    .pack h4 {margin-top:0; font-size:1.5em;}
+    .pack p {font-size:1em;}
+    #upload-section {margin-top:50px;}
+    #results {margin-top:20px;}
+    button {background:#000; color:#fff; padding:10px 20px; border:none; border-radius:5px; cursor:pointer; font-size:1em;}
+    footer {text-align:center; padding:20px; background:#eee; margin-top:50px;}
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Visser Style</h1>
-    <nav>
-      <a href="#how">Comment ça marche</a>
-      <a href="#packs">Nos Packs</a>
-      <a href="#examples">Exemples</a>
-      <a href="#faq">FAQ</a>
-    </nav>
-  </header>
+<header>
+  <h1>Visser Style</h1>
+  <p>Become Your Best Version</p>
+</header>
 
-  <section class="hero">
-    <h2>Become Your Best Version</h2>
-    <p>Envoie ton selfie et découvre ton style parfait généré par l'IA !</p>
-    <button class="btn" onclick="document.getElementById('upload').scrollIntoView({behavior:'smooth'});">Commencer</button>
-  </section>
+<section id="packs-section">
+  <h2>Choisis ton pack</h2>
+  <div class="packs">
 
-  <section id="how" class="section">
-    <h3>Comment ça marche</h3>
-    <div class="upload-section">
-      <input type="file" id="upload" accept="image/*">
-      <button class="btn" onclick="generateOutfits()">Générer mes outfits</button>
+    <div class="pack">
+      <h4>Pack Découverte</h4>
+      <p>3 looks stylés générés par IA</p>
+      <div id="paypal-container-DEC0U123"></div>
     </div>
-    <div class="results" id="results">
-      <!-- Les résultats IA apparaîtront ici -->
+
+    <div class="pack">
+      <h4>Pack Boost</h4>
+      <p>10 looks + 1 vidéo reel</p>
+      <div id="paypal-container-BST0U123"></div>
     </div>
-  </section>
 
-  <section id="packs" class="section">
-    <h3>Nos Packs</h3>
-    <div class="packs">
-      <div class="pack">
-        <h4>Pack Découverte</h4>
-        <p>3 looks stylés générés par IA</p>
-        <button class="btn">5€</button>
-      </div>
-      <div class="pack">
-        <h4>Pack Lookbook</h4>
-        <p>20 looks + mini reels</p>
-        <button class="btn">19,99€</button>
-      </div>
-      <div class="pack">
-        <h4>Abonnement Style Club</h4>
-        <p>5 looks par mois + bonus exclusifs</p>
-        <button class="btn">9€/mois</button>
-      </div>
+    <div class="pack">
+      <h4>Lookbook Complet</h4>
+      <p>20 looks + 3 reels + palette couleurs</p>
+      <div id="paypal-container-LBK0U123"></div>
     </div>
-  </section>
 
-  <section id="examples" class="section">
-    <h3>Exemples de Looks</h3>
-    <div class="results">
-      <div class="result-card">
-        <img src="https://via.placeholder.com/200x250?text=Look+1" alt="Look 1">
-        <p>Streetwear stylé</p>
-      </div>
-      <div class="result-card">
-        <img src="https://via.placeholder.com/200x250?text=Look+2" alt="Look 2">
-        <p>Look chic & moderne</p>
-      </div>
-      <div class="result-card">
-        <img src="https://via.placeholder.com/200x250?text=Look+3" alt="Look 3">
-        <p>Minimaliste & épuré</p>
-      </div>
-    </div>
-  </section>
+  </div>
+</section>
 
-  <section id="faq" class="section">
-    <h3>FAQ & Sécurité</h3>
-    <p>Vos photos sont supprimées après génération.</p>
-    <p>Les paiements sont sécurisés via PayPal/Stripe.</p>
-    <p>Accessible à tous ceux qui veulent être stylés facilement.</p>
-  </section>
+<section id="upload-section">
+  <h2>Upload ta photo</h2>
+  <input type="file" id="photo-upload" accept="image/*">
+  <button id="generate-btn">Générer ton look</button>
+  <div id="results"></div>
+</section>
 
-  <footer>
-    <p>© 2025 Visser Style</p>
-    <p>
-      <a href="#">Instagram</a> | 
-      <a href="#">TikTok</a> | 
-      <a href="#">Contact</a>
-    </p>
-  </footer>
+<footer>
+  &copy; 2025 Visser Style
+</footer>
 
-  <script>
-    function generateOutfits() {
-      const results = document.getElementById('results');
-      results.innerHTML = '';
-      for(let i=1;i<=3;i++){
-        const card = document.createElement('div');
-        card.classList.add('result-card');
-        const img = document.createElement('img');
-        img.src = 'https://via.placeholder.com/200x250?text=Look+'+i;
-        img.alt = 'Look '+i;
-        const p = document.createElement('p');
-        p.innerText = 'Ton look stylé n°'+i;
-        card.appendChild(img);
-        card.appendChild(p);
-        results.appendChild(card);
-      }
-    }
-  </script>
+<!-- PAYPAL SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=BAArZPtMm8iJsBPByVYiP5PWumGvHcaX9gdZTRIXE_qLNH5qHuo-YXmyEkLCiXH8ybQkha2nuALeFnAozI&components=hosted-buttons&disable-funding=venmo&currency=EUR"></script>
+<script>
+  // Pack Découverte
+  paypal.HostedButtons({
+    hostedButtonId: "3X2X2XWSY8CPQ"
+  }).render("#paypal-container-DEC0U123");
+
+  // Pack Boost
+  paypal.HostedButtons({
+    hostedButtonId: "BOOSTED123"
+  }).render("#paypal-container-BST0U123");
+
+  // Lookbook Complet
+  paypal.HostedButtons({
+    hostedButtonId: "LOOKBK123"
+  }).render("#paypal-container-LBK0U123");
+</script>
+
+<!-- IA Génération Placeholder -->
+<script>
+  const generateBtn = document.getElementById('generate-btn');
+  const results = document.getElementById('results');
+
+  generateBtn.addEventListener('click', () => {
+    const file = document.getElementById('photo-upload').files[0];
+    if (!file) { alert('Choisis d’abord une photo !'); return; }
+
+    // Zone pour les résultats IA
+    results.innerHTML = '<p>Génération en cours... (placeholder IA)</p>';
+
+    // Simulation d'attente puis affichage image placeholder
+    setTimeout(() => {
+      results.innerHTML = `
+        <h3>Voici tes looks stylés !</h3>
+        <img src="https://via.placeholder.com/250x350?text=Look+1" alt="Look 1">
+        <img src="https://via.placeholder.com/250x350?text=Look+2" alt="Look 2">
+        <img src="https://via.placeholder.com/250x350?text=Look+3" alt="Look 3">
+      `;
+    }, 2000);
+  });
+</script>
 
 </body>
 </html>
