--- a/index.html
+++ b/index.html
@@ -5,106 +5,148 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Visser Style - Ton styliste IA</title>
   <style>
-    body {font-family: Arial, sans-serif; margin:0; padding:0; background:#fff; color:#000;}
-    header {background:#000; color:#fff; text-align:center; padding:50px 20px;}
-    header h1 {margin:0; font-size:2.5em;}
-    header p {margin:10px 0 0; font-size:1.2em;}
-    section {padding:40px 20px; text-align:center;}
-    .packs {display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px;}
-    .pack {border:1px solid #000; padding:20px; width:250px; border-radius:10px;}
-    .pack h4 {margin-top:0; font-size:1.5em;}
-    .pack p {font-size:1em;}
-    #upload-section {margin-top:50px;}
-    #results {margin-top:20px;}
-    button {background:#000; color:#fff; padding:10px 20px; border:none; border-radius:5px; cursor:pointer; font-size:1em;}
-    footer {text-align:center; padding:20px; background:#eee; margin-top:50px;}
+    body { font-family: Arial, sans-serif; background: #fff; color: #000; margin:0; padding:0;}
+    header { background:#000; color:#fff; padding:20px; text-align:center;}
+    h1 { margin:0; font-size:2em;}
+    .container { max-width:900px; margin:20px auto; padding:20px; }
+    .upload-section, .packs, .account-section { margin-bottom:40px; }
+    .preview { margin-top:20px; display:flex; justify-content:space-around; flex-wrap:wrap;}
+    .preview img { width:200px; height:300px; object-fit:cover; margin:10px; border:2px solid #000;}
+    button { padding:10px 20px; font-size:1em; margin-top:10px; cursor:pointer; }
+    input, select { padding:10px; width:100%; margin:10px 0; }
+    form { border:1px solid #000; padding:20px; }
+    .pack { border:1px solid #000; padding:15px; margin:10px 0; }
   </style>
 </head>
 <body>
-
 <header>
   <h1>Visser Style</h1>
   <p>Become Your Best Version</p>
 </header>
 
-<section id="packs-section">
-  <h2>Choisis ton pack</h2>
-  <div class="packs">
+<div class="container">
 
-    <div class="pack">
-      <h4>Pack Découverte</h4>
-      <p>3 looks stylés générés par IA</p>
-      <div id="paypal-container-DEC0U123"></div>
+  <!-- Section Upload Photo -->
+  <div class="upload-section">
+    <h2>1️⃣ Envoie ta photo</h2>
+    <input type="file" id="photoInput" accept="image/*">
+    <button onclick="generateOutfits()">Générer ton outfit</button>
+    <div class="preview" id="previewArea">
+      <!-- Avant / Après apparaîtront ici -->
     </div>
-
-    <div class="pack">
-      <h4>Pack Boost</h4>
-      <p>10 looks + 1 vidéo reel</p>
-      <div id="paypal-container-BST0U123"></div>
-    </div>
-
-    <div class="pack">
-      <h4>Lookbook Complet</h4>
-      <p>20 looks + 3 reels + palette couleurs</p>
-      <div id="paypal-container-LBK0U123"></div>
-    </div>
-
   </div>
-</section>
 
-<section id="upload-section">
-  <h2>Upload ta photo</h2>
-  <input type="file" id="photo-upload" accept="image/*">
-  <button id="generate-btn">Générer ton look</button>
-  <div id="results"></div>
-</section>
+  <!-- Packs & Paiement -->
+  <div class="packs">
+    <h2>2️⃣ Choisis ton pack</h2>
+    <div class="pack">
+      <h3>Pack Découverte - 3 looks</h3>
+      <p>4,99€</p>
+      <!-- Bouton PayPal -->
+      <div id="paypal-pack1"></div>
+    </div>
+    <div class="pack">
+      <h3>Pack Boost - 10 looks + 1 reel</h3>
+      <p>12,99€</p>
+      <div id="paypal-pack2"></div>
+    </div>
+    <div class="pack">
+      <h3>Lookbook Complet - 20 looks</h3>
+      <p>19,99€</p>
+      <div id="paypal-pack3"></div>
+    </div>
+  </div>
 
-<footer>
-  &copy; 2025 Visser Style
-</footer>
+  <!-- Compte utilisateur -->
+  <div class="account-section">
+    <h2>3️⃣ Crée ton compte</h2>
+    <form id="accountForm">
+      <input type="text" id="name" placeholder="Prénom">
+      <input type="email" id="email" placeholder="Email">
+      <input type="password" id="password" placeholder="Mot de passe">
+      <button type="submit">Créer mon compte</button>
+    </form>
+  </div>
 
-<!-- PAYPAL SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=BAArZPtMm8iJsBPByVYiP5PWumGvHcaX9gdZTRIXE_qLNH5qHuo-YXmyEkLCiXH8ybQkha2nuALeFnAozI&components=hosted-buttons&disable-funding=venmo&currency=EUR"></script>
+</div>
+
+<!-- PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=TON_CLIENT_ID&currency=EUR"></script>
 <script>
-  // Pack Découverte
-  paypal.HostedButtons({
-    hostedButtonId: "3X2X2XWSY8CPQ"
-  }).render("#paypal-container-DEC0U123");
+  // PayPal Buttons
+  paypal.Buttons({
+    createOrder: function(data, actions) {
+      return actions.order.create({
+        purchase_units: [{
+          amount: { value: '4.99' }
+        }]
+      });
+    },
+    onApprove: function(data, actions) {
+      return actions.order.capture().then(function(details) {
+        alert('Paiement reçu : ' + details.payer.name.given_name);
+      });
+    }
+  }).render('#paypal-pack1');
 
-  // Pack Boost
-  paypal.HostedButtons({
-    hostedButtonId: "BOOSTED123"
-  }).render("#paypal-container-BST0U123");
+  paypal.Buttons({
+    createOrder: function(data, actions) {
+      return actions.order.create({
+        purchase_units: [{
+          amount: { value: '12.99' }
+        }]
+      });
+    },
+    onApprove: function(data, actions) {
+      return actions.order.capture().then(function(details) {
+        alert('Paiement reçu : ' + details.payer.name.given_name);
+      });
+    }
+  }).render('#paypal-pack2');
 
-  // Lookbook Complet
-  paypal.HostedButtons({
-    hostedButtonId: "LOOKBK123"
-  }).render("#paypal-container-LBK0U123");
-</script>
+  paypal.Buttons({
+    createOrder: function(data, actions) {
+      return actions.order.create({
+        purchase_units: [{
+          amount: { value: '19.99' }
+        }]
+      });
+    },
+    onApprove: function(data, actions) {
+      return actions.order.capture().then(function(details) {
+        alert('Paiement reçu : ' + details.payer.name.given_name);
+      });
+    }
+  }).render('#paypal-pack3');
 
-<!-- IA Génération Placeholder -->
-<script>
-  const generateBtn = document.getElementById('generate-btn');
-  const results = document.getElementById('results');
+  // Génération IA (placeholder pour l'instant)
+  function generateOutfits() {
+    const preview = document.getElementById('previewArea');
+    preview.innerHTML = '';
+    const files = document.getElementById('photoInput').files;
+    if(files.length === 0) { alert('Choisis une photo !'); return; }
+    const reader = new FileReader();
+    reader.onload = function(e) {
+      // Affiche la photo originale
+      const imgOriginal = document.createElement('img');
+      imgOriginal.src = e.target.result;
+      preview.appendChild(imgOriginal);
+      // Images "stylisées" placeholder
+      for(let i=0;i<3;i++){
+        const img = document.createElement('img');
+        img.src = 'https://placekitten.com/200/30' + i; // remplacer par API IA
+        preview.appendChild(img);
+      }
+    }
+    reader.readAsDataURL(files[0]);
+  }
 
-  generateBtn.addEventListener('click', () => {
-    const file = document.getElementById('photo-upload').files[0];
-    if (!file) { alert('Choisis d’abord une photo !'); return; }
-
-    // Zone pour les résultats IA
-    results.innerHTML = '<p>Génération en cours... (placeholder IA)</p>';
-
-    // Simulation d'attente puis affichage image placeholder
-    setTimeout(() => {
-      results.innerHTML = `
-        <h3>Voici tes looks stylés !</h3>
-        <img src="https://via.placeholder.com/250x350?text=Look+1" alt="Look 1">
-        <img src="https://via.placeholder.com/250x350?text=Look+2" alt="Look 2">
-        <img src="https://via.placeholder.com/250x350?text=Look+3" alt="Look 3">
-      `;
-    }, 2000);
+  // Compte utilisateur (placeholder)
+  document.getElementById('accountForm').addEventListener('submit', function(e){
+    e.preventDefault();
+    alert('Compte créé pour ' + document.getElementById('name').value);
   });
 </script>
-
 </body>
 </html>
+
