--- a/index.html
+++ b/index.html
@@ -4,149 +4,98 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Visser Style - Ton styliste IA</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #fff; color: #000; margin:0; padding:0;}
-    header { background:#000; color:#fff; padding:20px; text-align:center;}
-    h1 { margin:0; font-size:2em;}
-    .container { max-width:900px; margin:20px auto; padding:20px; }
-    .upload-section, .packs, .account-section { margin-bottom:40px; }
-    .preview { margin-top:20px; display:flex; justify-content:space-around; flex-wrap:wrap;}
-    .preview img { width:200px; height:300px; object-fit:cover; margin:10px; border:2px solid #000;}
-    button { padding:10px 20px; font-size:1em; margin-top:10px; cursor:pointer; }
-    input, select { padding:10px; width:100%; margin:10px 0; }
-    form { border:1px solid #000; padding:20px; }
-    .pack { border:1px solid #000; padding:15px; margin:10px 0; }
+    /* ===== RESET ET BASE ===== */
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
+    body { background-color: #000; color: #fff; }
+
+    /* ===== HEADER ===== */
+    header { display: flex; justify-content: space-between; align-items: center; padding: 20px 50px; border-bottom: 1px solid #333; position: sticky; top: 0; background-color: #000; z-index: 100; }
+    header h1 { font-weight: 700; color: #fff; font-size: 28px; }
+    .btn-compte { background-color: #C9A86A; color: #000; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: 700; transition: 0.3s; }
+    .btn-compte:hover { opacity: 0.8; }
+
+    /* ===== SECTION HERO ===== */
+    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 100px 20px; }
+    .hero h2 { font-size: 40px; margin-bottom: 20px; }
+    .hero p { font-size: 20px; margin-bottom: 30px; color: #C9A86A; }
+    .btn-generate { background-color: #C9A86A; color: #000; padding: 15px 30px; font-size: 18px; border: none; border-radius: 8px; cursor: pointer; transition: 0.3s; }
+    .btn-generate:hover { opacity: 0.85; }
+
+    /* ===== SECTION OUTFITS ===== */
+    .outfits { display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; padding: 50px 20px; }
+    .outfit-card { background-color: #111; border-radius: 10px; overflow: hidden; width: 300px; box-shadow: 0 0 20px rgba(0,0,0,0.5); transition: 0.3s; }
+    .outfit-card img { width: 100%; height: 400px; object-fit: cover; }
+    .outfit-card .card-body { padding: 20px; text-align: center; }
+    .outfit-card h3 { font-size: 22px; margin-bottom: 10px; }
+    .outfit-card p { color: #C9A86A; font-weight: 700; margin-bottom: 15px; }
+    .outfit-card button { background-color: #C9A86A; color: #000; padding: 10px 15px; border: none; border-radius: 5px; cursor: pointer; transition: 0.3s; }
+    .outfit-card button:hover { opacity: 0.8; }
+
+    /* ===== FOOTER ===== */
+    footer { text-align: center; padding: 30px 20px; border-top: 1px solid #333; font-size: 14px; color: #888; }
   </style>
 </head>
 <body>
-<header>
-  <h1>Visser Style</h1>
-  <p>Become Your Best Version</p>
-</header>
 
-<div class="container">
+  <!-- ===== HEADER ===== -->
+  <header>
+    <h1>Visser Style</h1>
+    <a href="#" class="btn-compte">Se connecter / Créer un compte</a>
+  </header>
 
-  <!-- Section Upload Photo -->
-  <div class="upload-section">
-    <h2>1️⃣ Envoie ta photo</h2>
-    <input type="file" id="photoInput" accept="image/*">
-    <button onclick="generateOutfits()">Générer ton outfit</button>
-    <div class="preview" id="previewArea">
-      <!-- Avant / Après apparaîtront ici -->
-    </div>
-  </div>
+  <!-- ===== HERO ===== -->
+  <section class="hero">
+    <h2>Ton styliste IA personnel</h2>
+    <p>Envoie un selfie → Génère 3 looks stylés → Paye et reçois tes images</p>
+    <button class="btn-generate" onclick="generateOutfits()">Générer ton outfit</button>
+  </section>
 
-  <!-- Packs & Paiement -->
-  <div class="packs">
-    <h2>2️⃣ Choisis ton pack</h2>
-    <div class="pack">
-      <h3>Pack Découverte - 3 looks</h3>
-      <p>4,99€</p>
-      <!-- Bouton PayPal -->
-      <div id="paypal-pack1"></div>
-    </div>
-    <div class="pack">
-      <h3>Pack Boost - 10 looks + 1 reel</h3>
-      <p>12,99€</p>
-      <div id="paypal-pack2"></div>
-    </div>
-    <div class="pack">
-      <h3>Lookbook Complet - 20 looks</h3>
-      <p>19,99€</p>
-      <div id="paypal-pack3"></div>
-    </div>
-  </div>
+  <!-- ===== OUTFITS SECTION ===== -->
+  <section class="outfits" id="outfits-section">
+    <!-- Les cartes IA vont apparaître ici -->
+  </section>
 
-  <!-- Compte utilisateur -->
-  <div class="account-section">
-    <h2>3️⃣ Crée ton compte</h2>
-    <form id="accountForm">
-      <input type="text" id="name" placeholder="Prénom">
-      <input type="email" id="email" placeholder="Email">
-      <input type="password" id="password" placeholder="Mot de passe">
-      <button type="submit">Créer mon compte</button>
-    </form>
-  </div>
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    © 2025 Visser Style - Become Your Best Version
+  </footer>
 
-</div>
+  <!-- ===== SCRIPT ===== -->
+  <script>
+    // Exemple d'images placeholder pour IA
+    const outfitImages = [
+      "https://images.unsplash.com/photo-1618354696076-ff12045f1f71?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bG9vayUyMHN0eWxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-4.0.3&q=80&w=400",
+      "https://images.unsplash.com/photo-1602810316996-94f8f50b1b89?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=400",
+      "https://images.unsplash.com/photo-1618354696076-ff12045f1f71?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bG9vayUyMHN0eWxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-4.0.3&q=80&w=400"
+    ];
 
-<!-- PayPal SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=TON_CLIENT_ID&currency=EUR"></script>
-<script>
-  // PayPal Buttons
-  paypal.Buttons({
-    createOrder: function(data, actions) {
-      return actions.order.create({
-        purchase_units: [{
-          amount: { value: '4.99' }
-        }]
-      });
-    },
-    onApprove: function(data, actions) {
-      return actions.order.capture().then(function(details) {
-        alert('Paiement reçu : ' + details.payer.name.given_name);
+    function generateOutfits() {
+      const section = document.getElementById("outfits-section");
+      section.innerHTML = ""; // reset
+
+      outfitImages.forEach((img, i) => {
+        const card = document.createElement("div");
+        card.className = "outfit-card";
+        card.innerHTML = `
+          <img src="${img}" alt="Outfit ${i+1}">
+          <div class="card-body">
+            <h3>Look ${i+1}</h3>
+            <p>Pack 3 looks - 4,99€</p>
+            <button onclick="paiementPayPal()">Acheter</button>
+          </div>
+        `;
+        section.appendChild(card);
       });
     }
-  }).render('#paypal-pack1');
 
-  paypal.Buttons({
-    createOrder: function(data, actions) {
-      return actions.order.create({
-        purchase_units: [{
-          amount: { value: '12.99' }
-        }]
-      });
-    },
-    onApprove: function(data, actions) {
-      return actions.order.capture().then(function(details) {
-        alert('Paiement reçu : ' + details.payer.name.given_name);
-      });
+    // ===== PAYPAL =====
+    function paiementPayPal() {
+      alert("Ici on déclenche le paiement PayPal pour le pack choisi");
+      // Tu pourras remplacer avec ton script PayPal complet
     }
-  }).render('#paypal-pack2');
+  </script>
 
-  paypal.Buttons({
-    createOrder: function(data, actions) {
-      return actions.order.create({
-        purchase_units: [{
-          amount: { value: '19.99' }
-        }]
-      });
-    },
-    onApprove: function(data, actions) {
-      return actions.order.capture().then(function(details) {
-        alert('Paiement reçu : ' + details.payer.name.given_name);
-      });
-    }
-  }).render('#paypal-pack3');
-
-  // Génération IA (placeholder pour l'instant)
-  function generateOutfits() {
-    const preview = document.getElementById('previewArea');
-    preview.innerHTML = '';
-    const files = document.getElementById('photoInput').files;
-    if(files.length === 0) { alert('Choisis une photo !'); return; }
-    const reader = new FileReader();
-    reader.onload = function(e) {
-      // Affiche la photo originale
-      const imgOriginal = document.createElement('img');
-      imgOriginal.src = e.target.result;
-      preview.appendChild(imgOriginal);
-      // Images "stylisées" placeholder
-      for(let i=0;i<3;i++){
-        const img = document.createElement('img');
-        img.src = 'https://placekitten.com/200/30' + i; // remplacer par API IA
-        preview.appendChild(img);
-      }
-    }
-    reader.readAsDataURL(files[0]);
-  }
-
-  // Compte utilisateur (placeholder)
-  document.getElementById('accountForm').addEventListener('submit', function(e){
-    e.preventDefault();
-    alert('Compte créé pour ' + document.getElementById('name').value);
-  });
-</script>
 </body>
 </html>
-
